learned z-indexing and fixed positioning

--- a/mdn-css/css-layout/positioning/fixed-positioning.css
+++ b/mdn-css/css-layout/positioning/fixed-positioning.css
@@ -1,8 +1,8 @@
 /* starting point */
 body {
   width: 500px;
+  height: 1400px;
   margin: 0 auto;
-  position: relative;
 }
 
 p {
@@ -17,17 +17,15 @@ span {
   border: 1px solid black;
 }
 
-.positioned {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  background: yellow;
+h1 {
+  position: fixed;
+  top: 0;
+  width: 500px;
+  margin-top: 0;
+  background: white;
+  padding: 10px;
 }
 
 p:nth-of-type(1) {
-  position: absolute;
-  background: lime;
-  top: 10px;
-  right: 30px;
-  z-index: 1;
+  margin-top: 60px;
 }
